migrate to junit4 parameterized tests