@@ -5,10 +5,12 @@ import io.webby.auth.user.DefaultUser;
 import io.webby.auth.user.UserAccess;
 import io.webby.examples.hello.JsonCustom;
 import io.webby.examples.hello.SampleBean;
+import io.webby.netty.marshal.MarshallerFactory.SupportedJsonLibrary;
 import io.webby.testing.Testing;
 import org.jetbrains.annotations.NotNull;
-import org.junit.jupiter.params.ParameterizedTest;
-import org.junit.jupiter.params.provider.EnumSource;
+import org.junit.Test;
+import org.junit.runner.RunWith;
+import org.junit.runners.Parameterized;
 
 import java.io.StringReader;
 import java.time.Instant;
@@ -19,127 +21,123 @@ import static io.webby.testing.AssertJson.*;
 import static io.webby.testing.TestingBytes.*;
 import static io.webby.url.view.EasyRender.outputToBytes;
 import static io.webby.url.view.EasyRender.writeToString;
+import static org.junit.Assume.assumeTrue;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
+@RunWith(Parameterized.class)
 public class JsonIntegrationTest {
-    @ParameterizedTest
-    @EnumSource(MarshallerFactory.SupportedJsonLibrary.class)
-    public void parse_json_to_map(MarshallerFactory.SupportedJsonLibrary library) throws Exception {
-        Json json = setupJson(library);
+    public JsonIntegrationTest(@NotNull SupportedJsonLibrary library) {
+        Testing.testStartup(withJsonLibrary(library), JsonCustom::customize);
+    }
 
+    @Parameterized.Parameters(name = "{index}: {0}")
+    public static SupportedJsonLibrary[] libraries() {
+        return SupportedJsonLibrary.values();
+    }
+    
+    @Test
+    public void parse_json_to_map() throws Exception {
         // Map interface
-        assertJsonRead(json, "{}", Map.class, Map.of());
-        assertJsonRead(json, "{\"foo\": 1}", Map.class, Map.of("foo", 1));
-        assertJsonRead(json, "{\"foo\": \"bar\"}", Map.class, Map.of("foo", "bar"));
-        assertJsonRead(json, "{\"foo\": null}", Map.class, Collections.singletonMap("foo", null));
+        assertJsonRead("{}", Map.class, Map.of());
+        assertJsonRead("{\"foo\": 1}", Map.class, Map.of("foo", 1));
+        assertJsonRead("{\"foo\": \"bar\"}", Map.class, Map.of("foo", "bar"));
+        assertJsonRead("{\"foo\": null}", Map.class, Collections.singletonMap("foo", null));
 
         // Concrete Map types
-        assertJsonRead(json, "{}", HashMap.class, Map.of());
-        assertJsonRead(json, "{\"foo\": \"bar\"}", HashMap.class, Map.of("foo", "bar"));
-        assertJsonRead(json, "{}", LinkedHashMap.class, Map.of());
-        assertJsonRead(json, "{\"foo\": \"bar\"}", LinkedHashMap.class, Map.of("foo", "bar"));
-        assertJsonRead(json, "{}", ConcurrentHashMap.class, Map.of());
-        assertJsonRead(json, "{\"foo\": \"bar\"}", ConcurrentHashMap.class, Map.of("foo", "bar"));
+        assertJsonRead("{}", HashMap.class, Map.of());
+        assertJsonRead("{\"foo\": \"bar\"}", HashMap.class, Map.of("foo", "bar"));
+        assertJsonRead("{}", LinkedHashMap.class, Map.of());
+        assertJsonRead("{\"foo\": \"bar\"}", LinkedHashMap.class, Map.of("foo", "bar"));
+        assertJsonRead("{}", ConcurrentHashMap.class, Map.of());
+        assertJsonRead("{\"foo\": \"bar\"}", ConcurrentHashMap.class, Map.of("foo", "bar"));
 
         // Map should be a default for Object
-        assertJsonRead(json, "{\"foo\": \"bar\"}", Object.class, Map.of("foo", "bar"));
+        assertJsonRead("{\"foo\": \"bar\"}", Object.class, Map.of("foo", "bar"));
     }
 
-    @ParameterizedTest
-    @EnumSource(MarshallerFactory.SupportedJsonLibrary.class)
-    public void parse_json_to_list(MarshallerFactory.SupportedJsonLibrary library) throws Exception {
-        Json json = setupJson(library);
-
+    @Test
+    public void parse_json_to_list() throws Exception {
         // List interface
-        assertJsonRead(json, "[]", List.class, List.of());
-        assertJsonRead(json, "[\"foo\"]", List.class, List.of("foo"));
-        assertJsonRead(json, "[123]", List.class, List.of(123));
-        assertJsonRead(json, "[123, \"foo\", null]", List.class, Arrays.asList(123, "foo", null));
+        assertJsonRead("[]", List.class, List.of());
+        assertJsonRead("[\"foo\"]", List.class, List.of("foo"));
+        assertJsonRead("[123]", List.class, List.of(123));
+        assertJsonRead("[123, \"foo\", null]", List.class, Arrays.asList(123, "foo", null));
 
         // Concrete List types
-        assertJsonRead(json, "[]", ArrayList.class, List.of());
-        assertJsonRead(json, "[\"foo\"]", ArrayList.class, List.of("foo"));
-        assertJsonRead(json, "[]", LinkedList.class, List.of());
-        assertJsonRead(json, "[0]", LinkedList.class, List.of(0));
+        assertJsonRead("[]", ArrayList.class, List.of());
+        assertJsonRead("[\"foo\"]", ArrayList.class, List.of("foo"));
+        assertJsonRead("[]", LinkedList.class, List.of());
+        assertJsonRead("[0]", LinkedList.class, List.of(0));
 
         // Other collections
-        assertJsonRead(json, "[]", Set.class, List.of());
-        assertJsonRead(json, "[0]", Set.class, List.of(0));
-        assertJsonRead(json, "[]", HashSet.class, List.of());
-        assertJsonRead(json, "[1]", HashSet.class, List.of(1));
-        assertJsonRead(json, "[]", ArrayDeque.class, List.of());
-        assertJsonRead(json, "[2]", ArrayDeque.class, List.of(2));
+        assertJsonRead("[]", Set.class, List.of());
+        assertJsonRead("[0]", Set.class, List.of(0));
+        assertJsonRead("[]", HashSet.class, List.of());
+        assertJsonRead("[1]", HashSet.class, List.of(1));
+        assertJsonRead("[]", ArrayDeque.class, List.of());
+        assertJsonRead("[2]", ArrayDeque.class, List.of(2));
     }
 
-    @ParameterizedTest
-    @EnumSource(MarshallerFactory.SupportedJsonLibrary.class)
-    public void to_json_from_map(MarshallerFactory.SupportedJsonLibrary library) throws Exception {
-        Json json = setupJson(library);
-
+    @Test
+    public void to_json_from_map() throws Exception {
         // Map interface
-        assertJsonWrite(json, Map.of(), "{}");
-        assertJsonWrite(json, Map.of("foo", 1), "{\"foo\":1}");
-        assertJsonWrite(json, Map.of("foo", "bar"), "{\"foo\":\"bar\"}");
+        assertJsonWrite(Map.of(), "{}");
+        assertJsonWrite(Map.of("foo", 1), "{\"foo\":1}");
+        assertJsonWrite(Map.of("foo", "bar"), "{\"foo\":\"bar\"}");
 
         // Concrete Map types
-        assertJsonWrite(json, new HashMap<>(), "{}");
-        assertJsonWrite(json, new HashMap<>(Map.of("foo", 1)), "{\"foo\":1}");
-        assertJsonWrite(json, new LinkedHashMap<>(), "{}");
-        assertJsonWrite(json, new LinkedHashMap<>(Map.of("foo", 1)), "{\"foo\":1}");
-        assertJsonWrite(json, new ConcurrentHashMap<>(), "{}");
-        assertJsonWrite(json, new ConcurrentHashMap<>(Map.of("foo", 1)), "{\"foo\":1}");
+        assertJsonWrite(new HashMap<>(), "{}");
+        assertJsonWrite(new HashMap<>(Map.of("foo", 1)), "{\"foo\":1}");
+        assertJsonWrite(new LinkedHashMap<>(), "{}");
+        assertJsonWrite(new LinkedHashMap<>(Map.of("foo", 1)), "{\"foo\":1}");
+        assertJsonWrite(new ConcurrentHashMap<>(), "{}");
+        assertJsonWrite(new ConcurrentHashMap<>(Map.of("foo", 1)), "{\"foo\":1}");
 
-        // assertJsonWrite(json, new Object(), "{}");
+        // assertJsonWrite(new Object(), "{}");
     }
 
-    @ParameterizedTest
-    @EnumSource(MarshallerFactory.SupportedJsonLibrary.class)
-    public void to_json_from_list(MarshallerFactory.SupportedJsonLibrary library) throws Exception {
-        Json json = setupJson(library);
-
+    @Test
+    public void to_json_from_list() throws Exception {
         // List interface
-        assertJsonWrite(json, List.of(), "[]");
-        assertJsonWrite(json, List.of("foo"), "[\"foo\"]");
-        assertJsonWrite(json, List.of(1, 2, 3), "[1,2,3]");
+        assertJsonWrite(List.of(), "[]");
+        assertJsonWrite(List.of("foo"), "[\"foo\"]");
+        assertJsonWrite(List.of(1, 2, 3), "[1,2,3]");
 
         // Concrete List types
-        assertJsonWrite(json, Collections.emptyList(), "[]");
-        assertJsonWrite(json, Arrays.asList(123, "foo", null), "[123,\"foo\",null]");
-        assertJsonWrite(json, new ArrayList<>(), "[]");
-        assertJsonWrite(json, new ArrayList<>(List.of("foo")), "[\"foo\"]");
-        assertJsonWrite(json, new LinkedList<>(), "[]");
-        assertJsonWrite(json, new LinkedList<>(List.of("foo")), "[\"foo\"]");
+        assertJsonWrite(Collections.emptyList(), "[]");
+        assertJsonWrite(Arrays.asList(123, "foo", null), "[123,\"foo\",null]");
+        assertJsonWrite(new ArrayList<>(), "[]");
+        assertJsonWrite(new ArrayList<>(List.of("foo")), "[\"foo\"]");
+        assertJsonWrite(new LinkedList<>(), "[]");
+        assertJsonWrite(new LinkedList<>(List.of("foo")), "[\"foo\"]");
 
         // Other collections
-        assertJsonWrite(json, new HashSet<>(), "[]");
-        assertJsonWrite(json, new HashSet<>(List.of(0)), "[0]");
-        assertJsonWrite(json, new ArrayDeque<>(), "[]");
-        assertJsonWrite(json, new ArrayDeque<>(List.of(1)), "[1]");
+        assertJsonWrite(new HashSet<>(), "[]");
+        assertJsonWrite(new HashSet<>(List.of(0)), "[0]");
+        assertJsonWrite(new ArrayDeque<>(), "[]");
+        assertJsonWrite(new ArrayDeque<>(List.of(1)), "[1]");
     }
 
-    @ParameterizedTest
-    @EnumSource(MarshallerFactory.SupportedJsonLibrary.class)
-    public void roundtrip_sample_bean(MarshallerFactory.SupportedJsonLibrary library) {
-        Json json = setupJson(library);
-        assertJsonStringRoundTrip(json, new SampleBean(123, "foo", List.of(1, 2)));
+    @Test
+    public void roundtrip_sample_bean() {
+        assertJsonStringRoundTrip(new SampleBean(123, "foo", List.of(1, 2)));
     }
 
     // GSON: https://github.com/google/gson/issues/1794
-    @ParameterizedTest
-    @EnumSource(value = MarshallerFactory.SupportedJsonLibrary.class, names = "DSL_JSON")
-    public void roundtrip_default_user(MarshallerFactory.SupportedJsonLibrary library) {
-        Json json = setupJson(library);
-        assertJsonStringRoundTrip(json, new DefaultUser(123, UserAccess.Simple));
+    @Test
+    public void roundtrip_default_user() {
+        assumeTrue(getJsonLibrary() == SupportedJsonLibrary.DSL_JSON);
+        assertJsonStringRoundTrip(new DefaultUser(123, UserAccess.Simple));
     }
 
     // @ParameterizedTest
     // @EnumSource(value = MarshallerFactory.SupportedJsonLibrary.class)
-    public void roundtrip_session(MarshallerFactory.SupportedJsonLibrary library) {
-        Json json = setupJson(library);
-        assertJsonStringRoundTrip(json, new Session(123, -1, Instant.now(), "User-Agent", "127.0.0.1"));
+    public void roundtrip_session() {
+        assertJsonStringRoundTrip(new Session(123, -1, Instant.now(), "User-Agent", "127.0.0.1"));
     }
 
-    private static void assertJsonRead(Json json, String input, Class<?> klass, Object expected) throws Exception {
+    private static void assertJsonRead(String input, Class<?> klass, Object expected) throws Exception {
+        Json json = Testing.Internals.json();
         assertJsonEquivalent(json.readString(input, klass), expected);
         assertJsonEquivalent(json.readChars(new StringReader(input), klass), expected);
         assertJsonEquivalent(json.readBytes(asBytes(input), klass), expected);
@@ -147,15 +145,12 @@ public class JsonIntegrationTest {
         assertJsonEquivalent(json.readByteBuf(asByteBuf(input), klass), expected);
     }
 
-    private static void assertJsonWrite(Json json, Object instance, String expected) throws Exception {
+    private static void assertJsonWrite(Object instance, String expected) throws Exception {
+        Json json = Testing.Internals.json();
         assertEquals(expected, json.writeString(instance));
         assertEquals(expected, writeToString(writer -> json.writeChars(writer, instance)));
         assertBytes(json.writeBytes(instance), expected);
         assertBytes(outputToBytes(outputStream -> json.writeBytes(outputStream, instance)), expected);
         assertByteBuf(json.writeByteBuf(instance), expected);
-    }
-
-    private static @NotNull Json setupJson(@NotNull MarshallerFactory.SupportedJsonLibrary library) {
-        return Testing.testStartup(withJsonLibrary(library), JsonCustom::customize).getInstance(Json.class);
     }
 }
